@@ -173,6 +173,10 @@ CVS code -
 	  no longer needed, and make the error message more similar to
 	  what the internal spell checker returns under the same
 	  circumstances. (DLR)
+	- Set the SIGWINCH handler back to the default just before
+	  running the alternate spell checker, so that the alternate
+	  spell checker can handle them, and set it back afterwards.
+	  (DLR)
   do_spell()
 	- When displaying an error message from do_(int|alt)_speller(),
 	  don't display the error message corresponding to errno if
